--- a/styles/_comp.SpeakerProfile.less
+++ b/styles/_comp.SpeakerProfile.less
@@ -41,7 +41,7 @@
   // this one has specific styles so it is necessary to keep
   // but I wouldn’t name it session-col, how about SessionDetails?
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 .photo-col {
   text-align: center;
